--- a/4 Kyu 02 Strip Comments/index.html
+++ b/4 Kyu 02 Strip Comments/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>4 Kyu Next smaller number with the same digits</title>
+  <title>4 Kyu 02 Strip Comments</title>
 </head>
 
 <body>
   <header>
-    <h1>4 Kyu Next smaller number with the same digits</h1>
+    <h1>4 Kyu 02 Strip Comments</h1>
   </header>
   <script type="module" src="script.js"></script>
 </body>
